Fix z-index issue with open/closed nav drawer and floating/sticky headers

--- a/assets/css/msc.scss
+++ b/assets/css/msc.scss
@@ -13,7 +13,7 @@ body {
   padding-top: 3px;
   padding-bottom: 3px;
   box-shadow: 0 2px 14px 0 rgb(0 0 0 / 5%);
-  z-index: 1!important;
+  z-index: 4!important;
 
   .mdc-top-app-bar__navigation-icon {
     color: #000;
@@ -146,11 +146,6 @@ body {
 
 .app-bar {
   position: absolute;
-}
-
-// Only apply this style if below top app bar.
-.mdc-top-app-bar {
-  z-index: 7;
 }
 
 h1 {
@@ -491,7 +486,7 @@ img.is-aligned-center {
   position: -webkit-sticky;
   position: sticky;
   top: 0;
-  z-index: 1;
+  z-index: 4;
 }
 
 .is-top-minus-20px {
@@ -500,4 +495,8 @@ img.is-aligned-center {
 
 .has-background-white {
   background-color: #fff;
+}
+
+.is-zindex-7 {
+  z-index: 7!important;
 }
